# TSLIT

./: .env  .gitignore  AGENTS.md  Modelfile  QUICKSTART.md  README.md  ROADMAP.md  SRS.md  ThreatModel.md  pyproject.toml  requirements.txt  requirements_llm_analyzer.txt
artifacts/: adversarial-affiliation-temporal-suite.ndjson  full-suite.ndjson
config/: .tmp_adversarial_deephat-v1-7b.yaml  .tmp_adversarial_temporal_qwen2.5-coder-7b-temporal.yaml  adversarial_affiliation_dataset.yaml  adversarial_affiliation_temporal_dataset.yaml  coder_model_dataset.yaml  example_campaign.yaml  example_with_logging.yaml  full_model_dataset.yaml  qwen3-8bit.yaml  qwen3VL-Thinking-F16bit.yaml  registry.json
docs/: ADVERSARIAL_AFFILIATION_SUMMARY.md  CODER_DATASET.md  CODER_DATASET_FLOW.md  CODER_DATASET_MANIFEST.md  CODER_DATASET_README.md  CODER_DATASET_SUMMARY.md  CODE_SECURITY_ANALYSIS.md  FLAG_VALIDATION.md  GET_STARTED_CODER_DATASET.md  LLM_ANALYZER.md  LLM_ANALYZER_ARCHITECTURE.md  LLM_ANALYZER_GUIDE.md  LLM_ANALYZER_IMPROVEMENTS.md  LLM_ANALYZER_SUMMARY.md  LLM_ANALYZER_WORKFLOW.md  QUICKSTART_LLM_ANALYZER.md  REQUEST_CONTEXT_ENHANCEMENT.md  REQUEST_LOGGING.md  SECURITY_ENHANCEMENTS_SUMMARY.md  SRS.md  TSLIT_SPECIFICATION.md  Thesis.md
experiments/: experiment1.md  experiment2.md  experiment3_coder_models.md  experiment4_adversarial_affiliation.md  experiment4_enhanced_temporal.md
reports/gpt-oss-120/: llm_analysis_report.json  llm_analysis_report.txt
scripts/: generate_logo.py  run_experiment.sh
src/scripts/: clean_pycache.sh  compare_models_adversarial.sh  llm_analyzer.py  llm_analyzer_agents.py  run_all_models_adversarial.sh  run_deephat_adversarial.sh  run_deephat_affiliation_temporal.sh  run_llm_analyzer.sh  run_llm_analyzer_temporal.sh
src/tslit/: __init__.py  backends.py  campaign.py  cli.py  detectors.py  registry.py  request_logger.py  scenarios.py  virtual_time.py
src/tslit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tslit/analyzer/: __init__.py  __main__.py  agents.py  core.py  security.py  validator.py
tests/: conftest.py  test_backends.py  test_cli.py  test_detectors.py  test_registry.py  test_scenarios.py  test_virtual_time.py
